--- a/index.html
+++ b/index.html
@@ -4,54 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magistory Instant Video</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
         <header>
-            <h1>🎬 Magistory Instant Video</h1>
-            <p>Editor video sederhana, cepat, dan berjalan di browser Anda.</p>
+            <h1>Magistory ✨</h1>
+            <p>Video editing jadi lebih mudah.</p>
         </header>
 
         <main>
-            <div class="card">
-                <h2>1. Pilih Video Anda</h2>
-                <input type="file" id="video-uploader" accept="video/*">
-            </div>
-
-            <div class="card video-preview-container" id="video-preview-original-container" style="display: none;">
-                <h3>Video Asli</h3>
-                <video id="video-player-original" controls></video>
-            </div>
-
-            <div class="card" id="editing-controls" style="display: none;">
-                <h2>2. Atur Pemotongan (Trim)</h2>
-                <div class="trim-controls">
-                    <label for="start-time">Waktu Mulai (detik):</label>
-                    <input type="number" id="start-time" value="0" min="0">
-                    <label for="end-time">Waktu Akhir (detik):</label>
-                    <input type="number" id="end-time" value="5" min="0">
+            <section class="step-card" id="upload-step">
+                <div class="step-header">
+                    <div class="step-number">1</div>
+                    <h2>Unggah Video Anda</h2>
                 </div>
-                <button id="trim-button">Potong Video!</button>
-            </div>
+                <label for="video-uploader" class="upload-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
+                    <span>Pilih File Video</span>
+                </label>
+                <input type="file" id="video-uploader" accept="video/*" hidden>
+                <p id="file-name-display" class="file-name"></p>
+            </section>
 
-            <div class="card" id="output-area" style="display: none;">
-                <h2>3. Hasil</h2>
-                <div class="video-preview-container" id="video-preview-result-container" style="display: none;">
-                     <h3>Video Hasil Potong</h3>
+            <section class="step-card" id="edit-step" style="display: none;">
+                <div class="step-header">
+                    <div class="step-number">2</div>
+                    <h2>Pratinjau & Atur Pemotongan</h2>
+                </div>
+                <div class="video-container">
+                    <video id="video-player-original" controls></video>
+                </div>
+                <div class="trim-controls">
+                    <div class="input-group">
+                        <label for="start-time">Mulai (detik)</label>
+                        <input type="number" id="start-time" value="0" min="0">
+                    </div>
+                    <div class="input-group">
+                        <label for="end-time">Selesai (detik)</label>
+                        <input type="number" id="end-time" value="5" min="0">
+                    </div>
+                </div>
+                <button id="trim-button" class="action-button">
+                    <div class="loader" style="display: none;"></div>
+                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 2v6h6"></path><path d="M3 12.7V9a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v6a3 3 0 0 1-3 3H9"></path><path d="M21 22v-6h-6"></path><path d="M21 11.3V15a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V9a3 3 0 0 1 3-3h6"></path></svg>
+                    <span>Potong Video Sekarang</span>
+                </button>
+            </section>
+            
+            <section class="step-card" id="result-step" style="display: none;">
+                <div class="step-header">
+                    <div class="step-number">3</div>
+                    <h2>Hasil Video</h2>
+                </div>
+                <div class="video-container">
                     <video id="video-player-result" controls></video>
                 </div>
-                <div id="log-container">
-                    <h3>Log Proses:</h3>
-                    <pre id="log-output">Menunggu aksi...</pre>
-                </div>
-            </div>
+                <a id="download-button" class="action-button download" href="#" download="magistory-trimmed.mp4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                    <span>Download Hasil</span>
+                </a>
+            </section>
+
+            <section class="log-card" id="log-section" style="display: none;">
+                <h3>Log Proses</h3>
+                <pre id="log-output"></pre>
+            </section>
         </main>
     </div>
 
     <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.0/dist/ffmpeg.min.js"></script>
     <script src="script.js"></script>
-
 </body>
 </html>
