Add loader UI for video editor initialization
Added a loader container with progress bar for editor preparation.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <p>Video editing jadi lebih mudah.</p>
         </header>
 
+        <div id="loader-container" class="loader-container">
+            <p id="loader-status">Mempersiapkan mesin editor...</p>
+            <div class="progress-bar">
+                <div id="progress-bar-inner" class="progress-bar-inner"></div>
+            </div>
+        </div>
+
         <main>
             <section class="step-card" id="upload-step">
                 <div class="step-header">
