--- a/idea.html
+++ b/idea.html
@@ -24,7 +24,7 @@
                     <div class="step-number">1</div>
                     <h2>Tuliskan Ide Video Anda</h2>
                 </div>
-                <textarea id="idea-input" placeholder="Contoh: video sinematik tentang hujan di perkotaan saat malam hari"></textarea>
+                <textarea id="idea-input" placeholder="Contoh: video sejarah indonesia dalam 5 menit."></textarea>
                 <button id="btn-generate-idea" class="action-button">
                     <span>Generate</span>
                 </button>
